--- a/_config.yml
+++ b/_config.yml
@@ -20,9 +20,9 @@ title                    : "BonVision"
 title_separator          : "-"
 name                     : "Aman Saleem"
 description              : "Information site for the BonVision package"
-url                      : "https://amansaleem.github.io/BonVision/"
+url                      : "https://bonvision.github.io/"
 baseurl                  : # the subpath of your site, e.g. "/blog"
-repository               : "amansaleem/BonVision" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+repository               : "bonvision/bonvision.github.io" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : "/assests/Images/logo.png" # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : "BonVision" # overrides the website title displayed in the masthead, use " " for no title
