--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ name                     : "Aman Saleem"
 description              : "Information site for the BonVision package"
 url                      : "https://bonvision.github.io/"
 baseurl                  : # the subpath of your site, e.g. "/blog"
-repository               : "bonvision/bonvision.github.io" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+repository               : "amansaleem/BonVision" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : "/assets/Images/logo.png" # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : "BonVision" # overrides the website title displayed in the masthead, use " " for no title
@@ -136,7 +136,7 @@ footer:
   links:
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/aman_sal"
+      url: "https://twitter.com/bonvision_"
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
       # url:
